--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "tenant:bootstrap": "node scripts/tenant-bootstrap.js"
+    "tenant:bootstrap": "node scripts/tenant-bootstrap.js",
+    "seed:users": "node scripts/seed-supabase-users.mjs"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
